update DisplayName on test and add security to the front